--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>DnD5e</title>
+    <title>Jeddak Ar.js demo</title>
     <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
     <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
     <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
@@ -20,5 +20,11 @@
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         <a-camera gps-camera rotation-reader>
 		</a-camera>
+
+        <a-entity scale=".2 .2 .2"> 
+            <a-entity gltf-model="./assets/alyssa/scene.gltf" scale="3 3 3" crossOrigin="anonymous">
+            </a-entity>
+            <a-marker-camera preset='hiro'></a-marker-camera>
+
 	</a-scene>
 </body>
